<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cz.muni.fi</groupId>
    <artifactId>jead</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>build-plugins</module>
        <module>test-fixtures</module>
        <module>detector</module>
        <module>assembly</module>
    </modules>

    <profiles>
        <profile>
            <id>with-test-fixtures</id>
            <activation>
                <property>
                    <name>!skipTests</name>
                </property>
            </activation>
            <modules>
                <module>test-fixtures</module>
            </modules>
        </profile>
    </profiles>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <java.version>25</java.version>
        <maven-assembly-plugin.version>3.8.0</maven-assembly-plugin.version>
    </properties>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Jead Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/Ricaps/JenaV3</url>
        </repository>
    </distributionManagement>
</project>
